Add map creation
